🚚 style: clear template style

--- a/web/index.html
+++ b/web/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Pokedex | MBC Pokemon League</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div>
+      <header>
+        <div>
+          <h1>Pokedex</h1>
+        </div>
+        <div>
+          <h2>Prepare yourself before MBC Pokemon League</h2>
+        </div>
+      </header>
+      <section id="pokemon">
+
+      </section>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
