--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex | MBC Pokemon League</title>
   </head>
@@ -13,11 +16,23 @@
           <h1>Pokedex</h1>
         </div>
         <div>
-          <h2>Prepare yourself before MBC Pokemon League</h2>
+          <h2>Prepare yourself before the upcomming MBC Pokemon League</h2>
         </div>
       </header>
       <section id="pokemon">
+        <div id="pokemon-card">
+          <div id="pokemon-thumbnail">
 
+          </div>
+          <div id="pokemon-details">
+            <div id="pokemon-name">
+
+            </div>
+            <div id="pokemon-type">
+              
+            </div>
+          </div>
+        </div>
       </section>
     </div>
     <script type="module" src="/main.js"></script>
