💄 style: update website icon

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/pokeball.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -19,22 +19,10 @@
           <h2>Prepare yourself before the upcomming MBC Pokemon League</h2>
         </div>
       </header>
-      <section id="pokemon">
-        <div id="pokemon-card">
-          <div id="pokemon-thumbnail">
-
-          </div>
-          <div id="pokemon-details">
-            <div id="pokemon-name">
-
-            </div>
-            <div id="pokemon-type">
-              
-            </div>
-          </div>
-        </div>
-      </section>
+      <div id="pokemon">
+        
+      </div>
+      <script type="module" src="/main.js"></script>
     </div>
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
